crates/lowering/tests/snapshots/concrete__lower_constructor_value.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.lowering_map"
snapshot_kind: text
---
LoweringMap {
    expr_item: {
        Id<indexing::indexes::ExprItem>(0): Constructor {
            arguments: [
                Id<syntax::cst::Type>(0),
            ],
        },
        Id<indexing::indexes::ExprItem>(1): Constructor {
            arguments: [],
        },
    },
}
