crates/lowering/tests/snapshots/concrete__lower_expression_application_chain.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 31..32,
            },
        }: Variable,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 34..35,
            },
        }: Variable,
    },
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 27..29,
            },
        }: Variable,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 35..37,
            },
        }: Variable,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 37..39,
            },
        }: Variable,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionApplicationChain,
                range: 27..39,
            },
        }: ApplicationChain {
            head: Some(
                Id<syntax::cst::Expression>(0),
            ),
            tail: [
                Type(
                    Some(
                        Id<syntax::cst::Type>(0),
                    ),
                ),
                Type(
                    Some(
                        Id<syntax::cst::Type>(1),
                    ),
                ),
                Expression(
                    Some(
                        Id<syntax::cst::Expression>(1),
                    ),
                ),
                Expression(
                    Some(
                        Id<syntax::cst::Expression>(2),
                    ),
                ),
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
}
