crates/lowering/tests/snapshots/concrete__lower_expression_array.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 25..26,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 27..29,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 30..32,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionArray,
                range: 23..33,
            },
        }: Array {
            expressions: [
                Id<syntax::cst::Expression>(0),
                Id<syntax::cst::Expression>(1),
                Id<syntax::cst::Expression>(2),
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
